inserindo div configurções

--- a/index.html
+++ b/index.html
@@ -9,23 +9,34 @@
 
 <body class="conteudo">
     <h1>Flappy Bird</h1>
-    <div wm-flappy>
 
-        <!-- 
-       <img class="passaro" src="img/passaro.png" alt="passaro">
-        <div class="par-de-barreiras">
-            <div class="barreira">
-                <div class="corpo"> </div>
-                <div class="borda"></div>
-            </div>
-            <div class="barreira">
-                <div class="borda"> </div>
-                <div class="corpo"></div>
+    <div class="grid">
+        <div wm-flappy>
+
+                <!-- 
+            <img class="passaro" src="img/passaro.png" alt="passaro">
+                <div class="par-de-barreiras">
+                    <div class="barreira">
+                        <div class="corpo"> </div>
+                        <div class="borda"></div>
+                    </div>
+                    <div class="barreira">
+                        <div class="borda"> </div>
+                        <div class="corpo"></div>
+                    </div>
+                </div>
+                <div class="progresso"> 10 </div>   -->
+        </div>
+        <div configuracao>
+            <h1 style="text-align: center;">Configurações</h1>
+            <div>
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" />
             </div>
         </div>
-        <div class="progresso"> 10 </div>   -->
     </div>
-
+    
+    
 
     <script src="js/flappy.js"></script>
 </body>
