testando o modo dark

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="progresso"> 10 </div>   -->
         </div>
-        <div configuracao>
+        <div class = "configuracao">
             <h1 style="text-align: center;">Configurações</h1>
             <table>
 
@@ -38,6 +38,11 @@
 
                <tr> 
                    <td> Cenário do Jogo </td>
+                   <label for="input-dark-mode">
+                    <a class="button">Modo dark</a>
+                   </label>
+                  <input type="checkbox" id="input-dark-mode">
+                  
                    <td>
                        <div>
                        <input type="radio" id="Noturno" name="dronee" value="Noturno">
@@ -73,7 +78,7 @@
                 </td>
     
             </tr>
-               <t]>
+               <t>
                    <td> Apresentação </td>
                    <td> <input type="text" id="name" name="name" required minlength="4" maxlength="300" size="20">
                    </td>
